# THICK2D

./: INCARs  README.md  runme.py  setup.cfg  setup.py  thick2dtool.in
.github/workflows/: ci.yml
ThicknessDatabase/2dmatpediaDatabase/: cif_files_used.txt
ThicknessDatabase/2dmatpediaDatabase/ClassicalML/: structure_thickness.txt  thick2dtool.in
ThicknessDatabase/2dmatpediaDatabase/DNN/: structure_thickness.txt  thick2dtool.in
ThicknessDatabase/mc2dDatabase/: cif_files_used.txt
ThicknessDatabase/mc2dDatabase/ClassicalML/: structure_thickness.txt  thick2dtool.in
ThicknessDatabase/mc2dDatabase/DNN/: structure_thickness.txt  thick2dtool.in
auxillaryfile/: throughput_thickness_calc.py
examples/GeSe/: GeSe.cif  thick2d.out  thick2dtool.in
examples/Graphene/: graphene.cif  thick2d.out  thick2dtool.in
examples/Graphene/ml_model/: best_thickness_model.pkl
examples/MoS2/: MoS2.cif  thick2d.out  thick2dtool.in
src/: optimize_struct.py  optimize_struct_qe.py  predict_thickness_2D.py  read_write.py  thick2d  thick2d_read_write.py  write_inputs.py
tests/: test_static_regressions.py
