[metadata]
name = thick2d
version = 1.0
description="THICK-2D -- Thickness Hierarchy Inference & Calculation Kit for 2D materials",
author = Chinedu Ekuma
author_email = cekuma1@gmail.com
url = https://sourceforge.net/projects/thick2d/
license = GNU GPL version 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
scripts =
    src/thick2d
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    spglib
    ase
    catboost
    pymatgen
    matminer
    scikit-learn
    tensorflow
    keras
    bayesian-optimization

[options.packages.find]
where = src

